--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <div class="play-overlay">▶</div>
 </div>
 <div id="contentaware" style="display:none;">
-  <iframe src="https://ual.cloud.panopto.eu/Panopto/Pages/Embed.aspx?id=YOUR-CONTENT-AWARE-FILL-VIDEO-ID&autoplay=true&offerviewer=false&showtitle=false&showbrand=false"
+  <iframe src="https://ual.cloud.panopto.eu/Panopto/Pages/embed.aspx?id=b3839b74-5113-4c3f-9929-b37d00a206ba"
           allow="autoplay" allowfullscreen style="width:100%;height:140px;border:none;"></iframe>
 </div>
 <div class="banner-caption">Hover or click to watch how Content‑Aware Fill works.</div>
