--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
     margin:2rem 0;
     text-align:center;
   }
-  .video-section img{
-    max-width:60%;
-    margin-bottom:1rem;
-    border-radius:8px;
-    border:2px solid #00b0b0;
-    box-shadow:0 0 12px rgba(0,180,180,0.2);
+  .video-section img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 0.5rem;
+    border: none;
+    border-radius: 8px;
+    box-shadow: none;
+  }
   }
   .video-container{
     position:relative;
