Update video iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 <div class="video-section">
   <div class="video-container">
-    <iframe src="https://ual.cloud.panopto.eu/Panopto/Pages/Embed.aspx?id=YOUR-TYPE-TOOL-VIDEO-ID&autoplay=false&offerviewer=false&showtitle=false&showbrand=false" allowfullscreen allow="autoplay"></iframe>
+    <iframe src="https://ual.cloud.panopto.eu/Panopto/Pages/embed.aspx?id=a6934be8-ab6a-4742-89eb-b37d00b2ddd8"></iframe>
   </div>
   <div class="banner-caption">Watch how to add and format text in Photoshop.</div>
 </div>
