--- a/index.html
+++ b/index.html
@@ -268,7 +268,54 @@
       <li>Which artist did you choose, and why does their work connect to your images?</li>
       <li>Include a short quote or idea from the artist that links with your theme (for example: memory, identity, place).</li>
       <li>Write one or two sentences explaining what you learned from this artist — visually or conceptually.</li>
-      <li>Add a short reference (artist name + book, website, or museum source).</li>
+      <li>Make sure to reference your sources correctly — this is marked and required for your portfolio submission. Include the <strong>artist’s name</strong> and <strong>book, website, or museum source</strong>. You can use the <a href="https://hsstokes.github.io/Harvard-Referencing-Guide/" target="_blank">Harvard Referencing Guide & Generator</a> to help you create accurate references.</li>
+  </ul>
+</div>
+💡 Why this works
+Crystal clear purpose: Students understand referencing is required and assessed.
+Link labelled clearly: The phrase “Harvard Referencing Guide & Generator” tells them exactly what the link does.
+Accessible language: Plain yet academically appropriate (fits multilingual classrooms).
+Opens in a new tab so students don’t lose their place in the exercise.
+Would you like me to also add a short “Referencing reminder” note at the bottom of the page (footer-style) that links to the same Harvard generator for constant visibility?
+
+2:21 PM
+Share
+
+Compare
+
+
+@GPT-5
+Compare
+
+
+@Gemini-2.5-Pro
+Compare
+
+
+@Claude-Opus-4.1
+Speak
+
+
+@ElevenLabs-v2.5-Turbo
+
+Yes, please add the "Referencing reminder" to the bottom of the page.
+
+Could you show me the code for the "Referencing reminder" note?
+
+How would you format the "Referencing reminder" note for best visibility?
+
+
+
+
+
+html 20
+Publish
+
+Share
+
+Expand
+Hide canvas
+
     </ul>
   </div>
 </div>
