Revise instructions for importing images in Photoshop

--- a/index.html
+++ b/index.html
@@ -227,9 +227,15 @@
 <h2>Step 2 — Arrange Your Work</h2>
 <div class="box">
   <ul>
-    <li>Import images of design experiments.</li>
-    <li>Use <strong>Move Tool (V)</strong> and <strong>Cmd/Ctrl + T</strong> to position or scale.</li>
-    <li>Add a white background layer (<strong>Edit → Fill → White</strong>).</li>
+    <li><strong>Import images</strong> of your design experiments.</li>
+    <li>You can do this by:
+      <ul>
+        <li><strong>Dragging and dropping</strong> an image from your computer directly into the Photoshop window — it will appear as a new layer.</li>
+        <li>Or, from the menu, choose <strong>File → Place Embedded…</strong> to insert an image into your A3 document.</li>
+      </ul>
+    </li>
+    <li>Use <strong>Move Tool (V)</strong> to position, and <strong>Cmd/Ctrl + T</strong> to resize or rotate each one.</li>
+    <li>Add a white background layer (<strong>Edit → Fill → White</strong>) so your work stands out clearly.</li>
   </ul>
 </div>
 
