--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
 <div class="example">
   <img src="images/step6-save-page.jpg" alt="Final layout">
-  <div class="banner-caption">A cohesive, professional outcome showing both story and technique.</div>
+  <div class="banner-caption">A cohesive, professional outcome showing both your visual story and linked artist research.</div>
 </div>
 
 <!-- Artist Section -->
