--- a/index.html
+++ b/index.html
@@ -270,33 +270,29 @@
   <div class="banner-caption">Balance the composition before adding effects.</div>
 </div>
 
-<!-- ⭐ Updated Step 3 ⭐ -->
 <h2>Step 3 — Content‑Aware Fill (Expanding Ideas from Your Image)</h2>
 <div class="box">
   <ul>
-    <li>Use the <strong>Rectangular Marquee Tool (M)</strong> to select a <strong>visually interesting area</strong> of your image — a texture, shape, or tone that stands out.</li>
-    <li>Go to <strong>Edit → Copy (Cmd/Ctrl +C)</strong> then <strong>Edit → Paste (Cmd/Ctrl + V)</strong>.  
-    This creates a <strong>new layer</strong> holding just that fragment of your image.</li>
-    <li>In the Layers panel, switch off the 👁 (eye icon) for the original layer so you can focus on your new cut‑out.</li>
-    <li>Select the <strong>Magic Wand Tool (W)</strong> and click on the <strong>white areas</strong> around the shape to select the empty space.</li>
-    <li>Then go to <strong>Edit → Content‑Aware Fill…</strong> → adjust the sampling and preview → click <strong>OK</strong>.  
-    Photoshop will fill in the space, blending content from your image to form new unexpected textures and abstract patterns.</li>
+    <li>Use the <strong>Rectangular Marquee Tool (M)</strong> to select a <strong>visually interesting area</strong> of your image — this might be a texture, shape or detail you find intriguing.</li>
+    <li>Go to <strong>Edit → Copy (Cmd/Ctrl +C)</strong> and then <strong>Edit → Paste (Cmd/Ctrl + V)</strong>.  
+      This creates a <strong>new layer</strong> containing just that section of your image.</li>
+    <li>In the Layers panel, click the 👁 (eye icon) to hide the original layer so you can see your cut‑out clearly on a white background.</li>
+    <li>Select the <strong>Magic Wand Tool (W)</strong> and click on the <strong>white areas</strong> around your shape to select the background space.</li>
+    <li>Go to <strong>Edit → Content‑Aware Fill…</strong> → adjust the sampling and preview → click <strong>OK</strong>.  
+      Photoshop fills the space around your fragment using information from the original image, creating an abstract and unexpected result.</li>
   </ul>
   <div class="tip">
-    💡 <strong>Purpose:</strong> This approach encourages you to <em>think and experiment abstractly</em> — using your primary research to discover new forms, shapes, and compositions as part of idea development.
+    💡 <strong>Purpose:</strong> This process helps you <em>experiment and think more abstractly</em> with your primary research — generating new textures, compositions, and forms that can inspire future design ideas.
   </div>
-</div>
 
-<div class="example">
-  <img src="images/step3-abstract-fill.jpg" alt="Abstract area selected and filled using Content-Aware Fill">
-  <div class="banner-caption">Selecting an area, copying it to a new layer, and using Content‑Aware Fill to create abstract variations from your own image sources.</div>
-</div>
-
-<div class="video-section">
-  <div class="video-container">
-    <iframe src="https://ual.cloud.panopto.eu/Panopto/Pages/embed.aspx?id=b3839b74-5113-4c3f-9929-b37d00a206ba"></iframe>
+  <div class="video-section">
+    <div class="video-container">
+      <iframe src="https://ual.cloud.panopto.eu/Panopto/Pages/embed.aspx?id=b3839b74-5113-4c3f-9929-b37d00a206ba"></iframe>
+    </div>
+    <div class="banner-caption">
+      Watch the Content‑Aware Fill demonstration to see these steps in action.
+    </div>
   </div>
-  <div class="banner-caption">Watch the Content‑Aware Fill demonstration and compare it to your own experiments.</div>
 </div>
 
 
